Add verified account signup flow
