# apps/backend/app/Http/Resources/UserResource.php
@@ -31,6 +31,8 @@ final class UserResource extends JsonResource
             ),
             'available_feature_flags' => AppSetting::globalFeatureFlags(),
             'email_verified_at' => $this->email_verified_at?->toIso8601String(),
+            'phone_verified_at' => $this->phone_verified_at?->toIso8601String(),
+            'account_verified_at' => $this->account_verified_at?->toIso8601String(),
             'is_admin' => $this->is_admin,
             'created_at' => $this->created_at?->toIso8601String(),
             'updated_at' => $this->updated_at?->toIso8601String(),
