# apps/backend/app/Models/User.php
@@ -33,6 +33,8 @@ final class User extends Authenticatable
         'name',
         'email',
         'phone',
+        'account_verified_at',
+        'phone_verified_at',
         'notes',
         'bio',
         'avatar_url',
@@ -61,6 +63,8 @@ final class User extends Authenticatable
     {
         return [
             'email_verified_at' => 'datetime',
+            'account_verified_at' => 'datetime',
+            'phone_verified_at' => 'datetime',
             'password' => 'hashed',
             'is_admin' => 'boolean',
             'feature_flags' => 'array',
